apps/billing/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: billing-api
  namespace: erp

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: billing-api

  template:
    metadata:
      labels:
        app: billing-api

    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: billing-api

          image: nginxdemos/hello:latest

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
