apps/billing/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: billing-ingress
  namespace: erp

  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - hosts:
        - billing.shopnoltd.dpdns.org
      secretName: billing-tls

  rules:
    - host: billing.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: billing-api
                port:
                  number: 80
